Project1/config/temp/unpackaged/Demo/objects/StudentPayment__c.object
<CustomObject>
    <description>Payment made by student when they sign up for tutoring.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>paid</fullName>
                </value>
                <value>
                    <fullName>unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student initial payment to begin tutoring.</description>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>StudentPayments</relationshipLabel>
        <relationshipName>StudentPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>StudentPayment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>StudentPayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentPayments</pluralLabel>
    <recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <description>Made payment</description>
        <label>Payment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PaymentIsValid</fullName>
        <active>false</active>
        <description>Only allow numbers in payment field and not zero.</description>
        <errorConditionFormula>NOT(REGEX(   Name , &quot;[a-zA-Z0\\.\\&apos;]+&quot;))</errorConditionFormula>
        <errorMessage>You have entered an invalid payment.</errorMessage>
    </validationRules>
</CustomObject>